## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	vicare/platform/configuration.sls.in				\
	vicare/platform/constants.sls.in				\
	vicare/platform/errno.sls.in					\
	vicare/platform/words.sls.in					\
	nausicaa/uri/pathnames.sls.in					\
	\
	vicare/unsafe/capi.sls						\
	vicare/unsafe/operations.sls					\
	vicare/unsafe/unicode.sls					\
	\
	vicare/platform/utilities.sls					\
	\
	vicare/language-extensions/cond-expand.sls			\
	vicare/language-extensions/cond-expand/OS-id-features.sls	\
	vicare/language-extensions/cond-expand/feature-cond.sls		\
	vicare/language-extensions/cond-expand/helpers.sls		\
	vicare/language-extensions/cond-expand/platform-features.sls	\
	vicare/language-extensions/cond-expand/configuration-features.sls \
	vicare/language-extensions/cond-expand/registry.sls		\
	\
	vicare/arguments/general-c-buffers.sls				\
	vicare/arguments/validation.sls					\
	\
	vicare/language-extensions/amb.sls				\
	vicare/language-extensions/ascii-chars/syntaxes.sls		\
	vicare/language-extensions/ascii-chars.sls			\
	vicare/language-extensions/c-enumerations.sls			\
	vicare/language-extensions/callables.sls			\
	vicare/language-extensions/comparisons.sls			\
	vicare/language-extensions/coroutines.sls			\
	vicare/language-extensions/custom-ports.sls			\
	vicare/language-extensions/define-record-extended.sls		\
	vicare/language-extensions/hooks.sls				\
	vicare/language-extensions/identifier-alists.sls		\
	vicare/language-extensions/identifier-properties.sls		\
	vicare/language-extensions/identifier-substitutions.sls		\
	vicare/language-extensions/increments.sls			\
	vicare/language-extensions/infix/auxiliary-syntaxes.sls		\
	vicare/language-extensions/infix/lr-driver.sls			\
	vicare/language-extensions/infix/parser-table.sls		\
	vicare/language-extensions/infix/parser-utils.sls		\
	vicare/language-extensions/infix/tokens.sls			\
	vicare/language-extensions/infix.sls				\
	vicare/language-extensions/makers.sls				\
	vicare/language-extensions/keywords.sls				\
	vicare/language-extensions/loops.sls				\
	vicare/language-extensions/namespaces.sls			\
	vicare/language-extensions/sentinels.sls			\
	vicare/language-extensions/simple-match.sls			\
	vicare/language-extensions/streams.sls				\
	vicare/language-extensions/syntaxes.sls				\
	vicare/language-extensions/try.sls				\
	vicare/language-extensions/variables.sls			\
	\
	vicare/crypto/randomisations.sls				\
	vicare/crypto/randomisations/low.sls				\
	vicare/crypto/randomisations/blum-blum-shub.sls			\
	vicare/crypto/randomisations/borosh.sls				\
	vicare/crypto/randomisations/cmrg.sls				\
	vicare/crypto/randomisations/distributions.sls			\
	vicare/crypto/randomisations/lists.sls				\
	vicare/crypto/randomisations/marsaglia.sls			\
	vicare/crypto/randomisations/mersenne.sls			\
	vicare/crypto/randomisations/strings.sls			\
	vicare/crypto/randomisations/vectors.sls			\
	\
	vicare/numerics/constants.sls					\
	vicare/numerics/flonum-formatter.sls				\
	vicare/numerics/flonum-parser.sls				\
	\
	vicare/containers/auxiliary-syntaxes.sls			\
	vicare/containers/bytevectors.sls				\
	vicare/containers/bytevector-compounds.sls			\
	vicare/containers/bytevector-compounds/core.sls			\
	vicare/containers/bytevector-compounds/unsafe.sls		\
	vicare/containers/weak-hashtables.sls				\
	vicare/containers/object-properties.sls				\
	vicare/containers/lists/stx.sls					\
	vicare/containers/lists/low.sls					\
	vicare/containers/lists.sls					\
	vicare/containers/vectors/low.sls				\
	vicare/containers/vectors.sls					\
	vicare/containers/strings/low.sls				\
	vicare/containers/strings.sls					\
	vicare/containers/strings/rabin-karp.sls			\
	vicare/containers/knuth-morris-pratt.sls			\
	vicare/containers/char-sets.sls					\
	vicare/containers/char-sets/blocks.sls				\
	vicare/containers/char-sets/categories.sls			\
	vicare/containers/levenshtein.sls				\
	vicare/containers/one-dimension-co.sls				\
	vicare/containers/one-dimension-cc.sls				\
	vicare/containers/bytevectors/generic-low.sls			\
	vicare/containers/bytevectors/generic.sls			\
	vicare/containers/bytevectors/s8.sls				\
	vicare/containers/bytevectors/s8low.sls				\
	vicare/containers/bytevectors/u8.sls				\
	vicare/containers/bytevectors/u8low.sls				\
	vicare/containers/arrays.sls					\
	vicare/containers/stacks.sls					\
	vicare/containers/queues.sls					\
	\
	vicare/assembler/inspection.sls					\
	vicare/checks.sls						\
	vicare/debugging/compiler.sls					\
	vicare/parser-logic.sls						\
	\
	vicare/net/channels.sls						\
	\
	vicare/irregex.sls						\
	vicare/irregex/compat.vicare.sls				\
	vicare/pregexp.sls						\
	vicare/getopts.sls						\
	vicare/formations.sls						\
	\
	vicare/parser-tools/silex/make-tables.sps			\
	vicare/parser-tools/silex/action.l				\
	vicare/parser-tools/silex/class.l				\
	vicare/parser-tools/silex/macro.l				\
	vicare/parser-tools/silex/nested-comment.l			\
	vicare/parser-tools/silex/regexp.l				\
	vicare/parser-tools/silex/string.l				\
	vicare/parser-tools/silex/macros/identifier.macros.l		\
	vicare/parser-tools/silex/macros/string.macros.l		\
	vicare/parser-tools/silex/macros/unicode.macros.l		\
	vicare/parser-tools/silex/macros/whitespaces-and-comments.macros.l \
	\
	vicare/parser-tools/silex/action-l.sls				\
	vicare/parser-tools/silex/char-lexer-driver.sls			\
	vicare/parser-tools/silex/class-l.sls				\
	vicare/parser-tools/silex/code-lexer-driver.sls			\
	vicare/parser-tools/silex/input-system.sls			\
	vicare/parser-tools/silex/lexer.sls				\
	vicare/parser-tools/silex/macro-l.sls				\
	vicare/parser-tools/silex/nested-comment-l.sls			\
	vicare/parser-tools/silex/regexp-l.sls				\
	vicare/parser-tools/silex/semantic.sls				\
	vicare/parser-tools/silex.sls					\
	vicare/parser-tools/silex/string-l.sls				\
	vicare/parser-tools/silex/tree-lexer-driver.sls			\
	vicare/parser-tools/silex/utilities.sls				\
	\
	vicare/parser-tools/unix-pathnames.sls				\
	\
	srfi/%3a0.sls							\
	srfi/%3a0/cond-expand.sls					\
	\
	srfi/%3a1.sls							\
	srfi/%3a1/lists.sls						\
	\
	srfi/%3a2.sls							\
	srfi/%3a2/and-let%2a.sls					\
	\
	srfi/%3a6.sls							\
	srfi/%3a6/basic-string-ports.sls				\
	\
	srfi/%3a8.sls							\
	srfi/%3a8/receive.sls						\
	\
	srfi/%3a9.sls							\
	srfi/%3a9/records.sls						\
	\
	srfi/%3a11.sls							\
	srfi/%3a11/let-values.sls					\
	\
	srfi/%3a13.sls							\
	srfi/%3a13/strings.sls						\
	\
	srfi/%3a14.sls							\
	srfi/%3a14/char-sets.sls					\
	\
	srfi/%3a16.sls							\
	srfi/%3a16/case-lambda.sls					\
	\
	srfi/%3a19.sls							\
	srfi/%3a19/time.sls						\
	\
	srfi/%3a23.sls							\
	srfi/%3a23/error.sls						\
	\
	srfi/%3a25.sls							\
	srfi/%3a25/multi-dimensional-arrays.sls				\
	srfi/%3a25/arlib.scm						\
	srfi/%3a25/list.scm						\
	\
	srfi/%3a26.sls							\
	srfi/%3a26/cut.sls						\
	\
	srfi/%3a27.sls							\
	srfi/%3a27/random-bits.sls					\
	\
	srfi/%3a28.sls							\
	srfi/%3a28/basic-format-strings.sls				\
	\
	srfi/%3a31.sls							\
	srfi/%3a31/rec.sls						\
	\
	srfi/%3a37.sls							\
	srfi/%3a37/args-fold.sls					\
	\
	srfi/%3a38.sls							\
	srfi/%3a38/with-shared-structure.sls				\
	\
	srfi/%3a39.sls							\
	srfi/%3a39/parameters.sls					\
	\
	srfi/%3a41.sls							\
	srfi/%3a41/streams.sls						\
	srfi/%3a41/streams/derived.sls					\
	srfi/%3a41/streams/primitive.sls				\
	\
	srfi/%3a42.sls							\
	srfi/%3a42/eager-comprehensions.sls				\
	\
	srfi/%3a43.sls							\
	srfi/%3a43/vectors.sls						\
	\
	srfi/%3a45.sls							\
	srfi/%3a45/lazy.sls						\
	\
	srfi/%3a48.sls							\
	srfi/%3a48/intermediate-format-strings.sls			\
	\
	srfi/%3a61/cond.sls						\
	srfi/%3a61.sls							\
	\
	srfi/%3a64.sls							\
	srfi/%3a64/testing.sls						\
	\
	srfi/%3a67/compare-procedures.sls				\
	srfi/%3a67.sls							\
	\
	srfi/%3a69/basic-hash-tables.sls				\
	srfi/%3a69.sls							\
	\
	srfi/%3a78.sls							\
	srfi/%3a78/lightweight-testing.sls				\
	\
	srfi/%3a98.sls							\
	srfi/%3a98/os-environment-variables.sls				\
	\
	srfi/%3a99.sls							\
	srfi/%3a99/records.sls						\
	srfi/%3a99/records/helper.sls					\
	srfi/%3a99/records/inspection.sls				\
	srfi/%3a99/records/procedural.sls				\
	srfi/%3a99/records/syntactic.sls				\
	\
	srfi/%3a101.sls							\
	srfi/%3a101/random-access-lists.sls				\
	srfi/%3a101/random-access-lists/procedures.sls			\
	srfi/%3a101/random-access-lists/syntax.sls			\
	srfi/%3a101/random-access-lists/equal.sls			\
	\
	srfi/%3a111.sls							\
	srfi/%3a111/boxes.sls						\
	\
	srfi/%3a112.sls							\
	srfi/%3a112/environment-inquiry.sls				\
	\
	srfi/%3a106.sls							\
	srfi/%3a106/socket.sls						\
	srfi/%3a106/compat.vicare.sls					\
	\
	nausicaa/parser-tools/ip-addresses/ipv4-address-lexer.l		\
	nausicaa/parser-tools/ip-addresses/ipv6-address-lexer.l		\
	nausicaa/parser-tools/ip-addresses/make-tables.sps		\
	\
	nausicaa/language/auxiliary-syntaxes.sls			\
	nausicaa/language/symbols-tree.sls				\
	\
	nausicaa/language/oopp.sls					\
	nausicaa/language/oopp/auxiliary-syntaxes.sls			\
	nausicaa/language/oopp/configuration.sls			\
	nausicaa/language/oopp/conditions.sls				\
	nausicaa/language/oopp/definition-parser-helpers.sls		\
	nausicaa/language/oopp/oopp-syntax-helpers.sls			\
	\
	nausicaa/language/multimethods.sls				\
	nausicaa/language/multimethods/auxiliary-syntaxes.sls		\
	nausicaa/language/multimethods/methods-table.sls		\
	nausicaa/language/multimethods/types.sls			\
	\
	nausicaa/language/builtins.sls					\
	nausicaa/language/conditions.sls				\
	nausicaa/language/increments.sls				\
	nausicaa/language/simple-match.sls				\
	nausicaa/language/infix.sls					\
	\
	nausicaa.sls							\
	\
	nausicaa/containers/lists.sls					\
	nausicaa/containers/vectors.sls					\
	nausicaa/containers/strings.sls					\
	nausicaa/containers/arrays.sls					\
	nausicaa/containers/stacks.sls					\
	nausicaa/containers/queues.sls					\
	nausicaa/containers/bitvectors.sls				\
	nausicaa/containers/iterators.sls				\
	\
	nausicaa/parser-tools/source-locations.sls			\
	nausicaa/parser-tools/lexical-tokens.sls			\
	nausicaa/parser-tools/silex/default-error-handler.sls		\
	nausicaa/parser-tools/lalr/lr-driver.sls			\
	nausicaa/parser-tools/lalr/glr-driver.sls			\
	nausicaa/parser-tools/lalr.sls					\
	\
	nausicaa/uri/ip.sls						\
	nausicaa/uri.sls						\
	nausicaa/uri/pathnames/unix.sls					\
	nausicaa/uri/pathnames/abstract.sls				\
	\
	nausicaa/parser-tools/ip-addresses/ipv4-address-lexer.sls	\
	nausicaa/parser-tools/ip-addresses/ipv4-address-parser.sls	\
	nausicaa/parser-tools/ip-addresses/ipv6-address-lexer.sls	\
	nausicaa/parser-tools/ip-addresses/ipv6-address-parser.sls	\
	nausicaa/parser-tools/ipv4-addresses.sls			\
	nausicaa/parser-tools/ipv6-addresses.sls			\
	nausicaa/parser-tools/uri.sls					\
	nausicaa/parser-tools/uri/utilities.sls				\
	\
	nausicaa/mehve.sls						\
	nausicaa/mehve/language/numerics/predicates.sls			\
	nausicaa/mehve/language/numerics/arithmetics.sls		\
	nausicaa/mehve/language/numerics/parts.sls			\
	nausicaa/mehve/language/numerics/transcendental.sls		\
	nausicaa/mehve/language/infix.sls				\
	nausicaa/mehve/language/input-output.sls			\
	\
	vicare/ffi.sls							\
	vicare/ffi/foreign-pointer-wrapper.sls				\
	\
	vicare/posix.sls						\
	vicare/posix/pid-files.sls					\
	vicare/posix/lock-pid-files.sls					\
	vicare/posix/log-files.sls					\
	vicare/posix/daemonisations.sls					\
	vicare/posix/simple-event-loop.sls				\
	vicare/posix/tcp-server-sockets.sls				\
	\
	vicare/glibc.sls						\
	vicare/iconv.sls						\
	vicare/gcc.sls							\
	vicare/linux.sls						\
	vicare/readline.sls						\
	vicare/cre2.sls							\
	\
	compile-vicare-platform.sps					\
	compile-vicare-unsafe.sps					\
	compile-vicare-language-extensions.sps				\
	compile-vicare-crypto.sps					\
	compile-vicare-numerics.sps					\
	compile-vicare-containers.sps					\
	compile-vicare-parser-tools.sps					\
	compile-vicare-net.sps						\
	compile-vicare-misc.sps						\
	\
	compile-srfi.sps						\
	compile-srfi-posix.sps						\
	compile-nausicaa-language.sps					\
	compile-nausicaa-containers.sps					\
	compile-nausicaa-parser-tools.sps				\
	compile-nausicaa-misc.sps					\
	compile-mehve-language.sps					\
	compile-ffi.sps							\
	compile-posix.sps						\
	compile-glibc.sps						\
	compile-iconv.sps						\
	compile-gcc.sps							\
	compile-linux.sps						\
	compile-readline.sps						\
	compile-cre2.sps

#page
#### fasl file lists

fasldir		= $(builddir)
instdir		= $(libdir)/vicare-scheme

libvicaredir	= $(instdir)
nobase_dist_libvicare_DATA	= \
	$(fasldir)/vicare/unsafe/capi.fasl				\
	$(fasldir)/vicare/unsafe/operations.fasl			\
	$(fasldir)/vicare/unsafe/unicode.fasl				\
	\
	$(fasldir)/vicare/platform/configuration.fasl			\
	$(fasldir)/vicare/platform/constants.fasl			\
	$(fasldir)/vicare/platform/errno.fasl				\
	$(fasldir)/vicare/platform/features.fasl			\
	$(fasldir)/vicare/platform/words.fasl				\
	$(fasldir)/vicare/platform/utilities.fasl			\
	\
	$(fasldir)/vicare/language-extensions/cond-expand.fasl		\
	$(fasldir)/vicare/language-extensions/cond-expand/OS-id-features.fasl	\
	$(fasldir)/vicare/language-extensions/cond-expand/feature-cond.fasl	\
	$(fasldir)/vicare/language-extensions/cond-expand/helpers.fasl	\
	$(fasldir)/vicare/language-extensions/cond-expand/platform-features.fasl	\
	$(fasldir)/vicare/language-extensions/cond-expand/configuration-features.fasl	\
	$(fasldir)/vicare/language-extensions/cond-expand/registry.fasl	\
	\
	$(fasldir)/vicare/arguments/general-c-buffers.fasl		\
	$(fasldir)/vicare/arguments/validation.fasl			\
	\
	$(fasldir)/vicare/language-extensions/amb.fasl			\
	$(fasldir)/vicare/language-extensions/ascii-chars/syntaxes.fasl	\
	$(fasldir)/vicare/language-extensions/ascii-chars.fasl		\
	$(fasldir)/vicare/language-extensions/c-enumerations.fasl	\
	$(fasldir)/vicare/language-extensions/callables.fasl		\
	$(fasldir)/vicare/language-extensions/comparisons.fasl		\
	$(fasldir)/vicare/language-extensions/coroutines.fasl		\
	$(fasldir)/vicare/language-extensions/custom-ports.fasl		\
	$(fasldir)/vicare/language-extensions/define-record-extended.fasl	\
	$(fasldir)/vicare/language-extensions/hooks.fasl		\
	$(fasldir)/vicare/language-extensions/identifier-alists.fasl	\
	$(fasldir)/vicare/language-extensions/identifier-properties.fasl	\
	$(fasldir)/vicare/language-extensions/identifier-substitutions.fasl	\
	$(fasldir)/vicare/language-extensions/increments.fasl		\
	$(fasldir)/vicare/language-extensions/infix/auxiliary-syntaxes.fasl	\
	$(fasldir)/vicare/language-extensions/infix/lr-driver.fasl	\
	$(fasldir)/vicare/language-extensions/infix/parser-table.fasl	\
	$(fasldir)/vicare/language-extensions/infix/parser-utils.fasl	\
	$(fasldir)/vicare/language-extensions/infix/tokens.fasl		\
	$(fasldir)/vicare/language-extensions/infix.fasl		\
	$(fasldir)/vicare/language-extensions/makers.fasl		\
	$(fasldir)/vicare/language-extensions/keywords.fasl		\
	$(fasldir)/vicare/language-extensions/loops.fasl		\
	$(fasldir)/vicare/language-extensions/namespaces.fasl		\
	$(fasldir)/vicare/language-extensions/sentinels.fasl		\
	$(fasldir)/vicare/language-extensions/simple-match.fasl		\
	$(fasldir)/vicare/language-extensions/streams.fasl		\
	$(fasldir)/vicare/language-extensions/syntaxes.fasl		\
	$(fasldir)/vicare/language-extensions/try.fasl			\
	$(fasldir)/vicare/language-extensions/variables.fasl		\
	\
	$(fasldir)/vicare/crypto/randomisations.fasl			\
	$(fasldir)/vicare/crypto/randomisations/low.fasl		\
	$(fasldir)/vicare/crypto/randomisations/blum-blum-shub.fasl	\
	$(fasldir)/vicare/crypto/randomisations/borosh.fasl		\
	$(fasldir)/vicare/crypto/randomisations/cmrg.fasl		\
	$(fasldir)/vicare/crypto/randomisations/distributions.fasl	\
	$(fasldir)/vicare/crypto/randomisations/lists.fasl		\
	$(fasldir)/vicare/crypto/randomisations/marsaglia.fasl		\
	$(fasldir)/vicare/crypto/randomisations/mersenne.fasl		\
	$(fasldir)/vicare/crypto/randomisations/strings.fasl		\
	$(fasldir)/vicare/crypto/randomisations/vectors.fasl		\
	\
	$(fasldir)/vicare/numerics/constants.fasl			\
	$(fasldir)/vicare/numerics/flonum-formatter.fasl		\
	$(fasldir)/vicare/numerics/flonum-parser.fasl			\
	\
	$(fasldir)/vicare/containers/auxiliary-syntaxes.fasl		\
	$(fasldir)/vicare/containers/bytevectors.fasl			\
	$(fasldir)/vicare/containers/bytevector-compounds.fasl		\
	$(fasldir)/vicare/containers/bytevector-compounds/core.fasl	\
	$(fasldir)/vicare/containers/bytevector-compounds/unsafe.fasl	\
	$(fasldir)/vicare/containers/weak-hashtables.fasl		\
	$(fasldir)/vicare/containers/object-properties.fasl		\
	$(fasldir)/vicare/containers/lists/stx.fasl			\
	$(fasldir)/vicare/containers/lists/low.fasl			\
	$(fasldir)/vicare/containers/lists.fasl				\
	$(fasldir)/vicare/containers/vectors/low.fasl			\
	$(fasldir)/vicare/containers/vectors.fasl			\
	$(fasldir)/vicare/containers/strings/low.fasl			\
	$(fasldir)/vicare/containers/strings.fasl			\
	$(fasldir)/vicare/containers/strings/rabin-karp.fasl		\
	$(fasldir)/vicare/containers/knuth-morris-pratt.fasl		\
	$(fasldir)/vicare/containers/char-sets.fasl			\
	$(fasldir)/vicare/containers/char-sets/blocks.fasl		\
	$(fasldir)/vicare/containers/char-sets/categories.fasl		\
	$(fasldir)/vicare/containers/levenshtein.fasl			\
	$(fasldir)/vicare/containers/one-dimension-co.fasl		\
	$(fasldir)/vicare/containers/one-dimension-cc.fasl		\
	$(fasldir)/vicare/containers/bytevectors/generic-low.fasl	\
	$(fasldir)/vicare/containers/bytevectors/generic.fasl		\
	$(fasldir)/vicare/containers/bytevectors/s8.fasl		\
	$(fasldir)/vicare/containers/bytevectors/s8low.fasl		\
	$(fasldir)/vicare/containers/bytevectors/u8.fasl		\
	$(fasldir)/vicare/containers/bytevectors/u8low.fasl		\
	$(fasldir)/vicare/containers/arrays.fasl			\
	$(fasldir)/vicare/containers/stacks.fasl			\
	$(fasldir)/vicare/containers/queues.fasl			\
	\
	$(fasldir)/vicare/assembler/inspection.fasl			\
	$(fasldir)/vicare/checks.fasl					\
	$(fasldir)/vicare/debugging/compiler.fasl			\
	$(fasldir)/vicare/parser-logic.fasl				\
	\
	$(fasldir)/vicare/net/channels.fasl				\
	\
	$(fasldir)/vicare/irregex.fasl					\
	$(fasldir)/vicare/irregex/compat.fasl				\
	$(fasldir)/vicare/pregexp.fasl					\
	$(fasldir)/vicare/getopts.fasl					\
	$(fasldir)/vicare/formations.fasl				\
	\
	$(fasldir)/vicare/parser-tools/silex/action-l.fasl		\
	$(fasldir)/vicare/parser-tools/silex/char-lexer-driver.fasl	\
	$(fasldir)/vicare/parser-tools/silex/class-l.fasl		\
	$(fasldir)/vicare/parser-tools/silex/code-lexer-driver.fasl	\
	$(fasldir)/vicare/parser-tools/silex/input-system.fasl		\
	$(fasldir)/vicare/parser-tools/silex/lexer.fasl			\
	$(fasldir)/vicare/parser-tools/silex/macro-l.fasl		\
	$(fasldir)/vicare/parser-tools/silex/nested-comment-l.fasl	\
	$(fasldir)/vicare/parser-tools/silex/regexp-l.fasl		\
	$(fasldir)/vicare/parser-tools/silex/semantic.fasl		\
	$(fasldir)/vicare/parser-tools/silex.fasl			\
	$(fasldir)/vicare/parser-tools/silex/string-l.fasl		\
	$(fasldir)/vicare/parser-tools/silex/tree-lexer-driver.fasl	\
	$(fasldir)/vicare/parser-tools/silex/utilities.fasl		\
	\
	$(fasldir)/vicare/parser-tools/unix-pathnames.fasl

if WANT_SRFI
libsrfidir			= $(instdir)
nobase_dist_libsrfi_DATA	= \
	$(fasldir)/srfi/%3a0.fasl					\
	$(fasldir)/srfi/%3a0/cond-expand.fasl				\
	\
	$(fasldir)/srfi/%3a1.fasl					\
	$(fasldir)/srfi/%3a1/lists.fasl					\
	\
	$(fasldir)/srfi/%3a2.fasl					\
	$(fasldir)/srfi/%3a2/and-let%2a.fasl				\
	\
	$(fasldir)/srfi/%3a6.fasl					\
	$(fasldir)/srfi/%3a6/basic-string-ports.fasl			\
	\
	$(fasldir)/srfi/%3a8.fasl					\
	$(fasldir)/srfi/%3a8/receive.fasl				\
	\
	$(fasldir)/srfi/%3a9.fasl					\
	$(fasldir)/srfi/%3a9/records.fasl				\
	\
	$(fasldir)/srfi/%3a11.fasl					\
	$(fasldir)/srfi/%3a11/let-values.fasl				\
	\
	$(fasldir)/srfi/%3a13.fasl					\
	$(fasldir)/srfi/%3a13/strings.fasl				\
	\
	$(fasldir)/srfi/%3a14.fasl					\
	$(fasldir)/srfi/%3a14/char-sets.fasl				\
	\
	$(fasldir)/srfi/%3a16.fasl					\
	$(fasldir)/srfi/%3a16/case-lambda.fasl				\
	\
	$(fasldir)/srfi/%3a19.fasl					\
	$(fasldir)/srfi/%3a19/time.fasl					\
	\
	$(fasldir)/srfi/%3a23.fasl					\
	$(fasldir)/srfi/%3a23/error.fasl				\
	\
	$(fasldir)/srfi/%3a25.fasl					\
	$(fasldir)/srfi/%3a25/multi-dimensional-arrays.fasl		\
	\
	$(fasldir)/srfi/%3a26.fasl					\
	$(fasldir)/srfi/%3a26/cut.fasl					\
	\
	$(fasldir)/srfi/%3a27.fasl					\
	$(fasldir)/srfi/%3a27/random-bits.fasl				\
	\
	$(fasldir)/srfi/%3a28.fasl					\
	$(fasldir)/srfi/%3a28/basic-format-strings.fasl			\
	\
	$(fasldir)/srfi/%3a31.fasl					\
	$(fasldir)/srfi/%3a31/rec.fasl					\
	\
	$(fasldir)/srfi/%3a37.fasl					\
	$(fasldir)/srfi/%3a37/args-fold.fasl				\
	\
	$(fasldir)/srfi/%3a38.fasl					\
	$(fasldir)/srfi/%3a38/with-shared-structure.fasl		\
	\
	$(fasldir)/srfi/%3a39.fasl					\
	$(fasldir)/srfi/%3a39/parameters.fasl				\
	\
	$(fasldir)/srfi/%3a41.fasl					\
	$(fasldir)/srfi/%3a41/streams.fasl				\
	$(fasldir)/srfi/%3a41/streams/derived.fasl			\
	$(fasldir)/srfi/%3a41/streams/primitive.fasl			\
	\
	$(fasldir)/srfi/%3a42.fasl					\
	$(fasldir)/srfi/%3a42/eager-comprehensions.fasl			\
	\
	$(fasldir)/srfi/%3a43.fasl					\
	$(fasldir)/srfi/%3a43/vectors.fasl				\
	\
	$(fasldir)/srfi/%3a45.fasl					\
	$(fasldir)/srfi/%3a45/lazy.fasl					\
	\
	$(fasldir)/srfi/%3a48.fasl					\
	$(fasldir)/srfi/%3a48/intermediate-format-strings.fasl		\
	\
	$(fasldir)/srfi/%3a61/cond.fasl					\
	$(fasldir)/srfi/%3a61.fasl					\
	\
	$(fasldir)/srfi/%3a64.fasl					\
	$(fasldir)/srfi/%3a64/testing.fasl				\
	\
	$(fasldir)/srfi/%3a67/compare-procedures.fasl			\
	$(fasldir)/srfi/%3a67.fasl					\
	\
	$(fasldir)/srfi/%3a69/basic-hash-tables.fasl			\
	$(fasldir)/srfi/%3a69.fasl					\
	\
	$(fasldir)/srfi/%3a78.fasl					\
	$(fasldir)/srfi/%3a78/lightweight-testing.fasl			\
	\
	$(fasldir)/srfi/%3a98.fasl					\
	$(fasldir)/srfi/%3a98/os-environment-variables.fasl		\
	\
	$(fasldir)/srfi/%3a99.fasl					\
	$(fasldir)/srfi/%3a99/records.fasl				\
	$(fasldir)/srfi/%3a99/records/helper.fasl			\
	$(fasldir)/srfi/%3a99/records/inspection.fasl			\
	$(fasldir)/srfi/%3a99/records/procedural.fasl			\
	$(fasldir)/srfi/%3a99/records/syntactic.fasl			\
	\
	$(fasldir)/srfi/%3a101.fasl					\
	$(fasldir)/srfi/%3a101/random-access-lists.fasl			\
	$(fasldir)/srfi/%3a101/random-access-lists/procedures.fasl	\
	$(fasldir)/srfi/%3a101/random-access-lists/syntax.fasl		\
	$(fasldir)/srfi/%3a101/random-access-lists/equal.fasl		\
	\
	$(fasldir)/srfi/%3a111.fasl					\
	$(fasldir)/srfi/%3a111/boxes.fasl				\
	\
	$(fasldir)/srfi/%3a112.fasl					\
	$(fasldir)/srfi/%3a112/environment-inquiry.fasl
endif

if WANT_SRFI
if WANT_POSIX
libsrfiposixdir			= $(instdir)
nobase_dist_libsrfiposix_DATA	= \
	$(fasldir)/srfi/%3a106.fasl					\
	$(fasldir)/srfi/%3a106/socket.fasl				\
	$(fasldir)/srfi/%3a106/compat.fasl
endif
endif

if WANT_NAUSICAA
libnausicaadir			= $(instdir)
nobase_dist_libnausicaa_DATA	= \
	$(fasldir)/nausicaa/language/auxiliary-syntaxes.fasl		\
	$(fasldir)/nausicaa/language/symbols-tree.fasl			\
	\
	$(fasldir)/nausicaa/language/oopp.fasl				\
	$(fasldir)/nausicaa/language/oopp/auxiliary-syntaxes.fasl	\
	$(fasldir)/nausicaa/language/oopp/configuration.fasl		\
	$(fasldir)/nausicaa/language/oopp/conditions.fasl		\
	$(fasldir)/nausicaa/language/oopp/definition-parser-helpers.fasl \
	$(fasldir)/nausicaa/language/oopp/oopp-syntax-helpers.fasl	\
	\
	$(fasldir)/nausicaa/language/multimethods.fasl			\
	$(fasldir)/nausicaa/language/multimethods/auxiliary-syntaxes.fasl \
	$(fasldir)/nausicaa/language/multimethods/methods-table.fasl	\
	$(fasldir)/nausicaa/language/multimethods/types.fasl		\
	\
	$(fasldir)/nausicaa/language/builtins.fasl			\
	$(fasldir)/nausicaa/language/conditions.fasl			\
	$(fasldir)/nausicaa/language/increments.fasl			\
	$(fasldir)/nausicaa/language/simple-match.fasl			\
	$(fasldir)/nausicaa/language/infix.fasl				\
	\
	$(fasldir)/nausicaa.fasl					\
	\
	$(fasldir)/nausicaa/containers/lists.fasl			\
	$(fasldir)/nausicaa/containers/vectors.fasl			\
	$(fasldir)/nausicaa/containers/strings.fasl			\
	$(fasldir)/nausicaa/containers/arrays.fasl			\
	$(fasldir)/nausicaa/containers/stacks.fasl			\
	$(fasldir)/nausicaa/containers/queues.fasl			\
	$(fasldir)/nausicaa/containers/bitvectors.fasl			\
	$(fasldir)/nausicaa/containers/iterators.fasl			\
	\
	$(fasldir)/nausicaa/parser-tools/source-locations.fasl		\
	$(fasldir)/nausicaa/parser-tools/lexical-tokens.fasl		\
	$(fasldir)/nausicaa/parser-tools/silex/default-error-handler.fasl \
	$(fasldir)/nausicaa/parser-tools/lalr/lr-driver.fasl		\
	$(fasldir)/nausicaa/parser-tools/lalr/glr-driver.fasl		\
	$(fasldir)/nausicaa/parser-tools/lalr.fasl			\
	\
	$(fasldir)/nausicaa/uri/ip.fasl					\
	$(fasldir)/nausicaa/uri.fasl					\
	$(fasldir)/nausicaa/uri/pathnames.fasl				\
	$(fasldir)/nausicaa/uri/pathnames/unix.fasl			\
	$(fasldir)/nausicaa/uri/pathnames/abstract.fasl			\
	\
	$(fasldir)/nausicaa/parser-tools/ip-addresses/ipv4-address-lexer.fasl	\
	$(fasldir)/nausicaa/parser-tools/ip-addresses/ipv4-address-parser.fasl	\
	$(fasldir)/nausicaa/parser-tools/ip-addresses/ipv6-address-lexer.fasl	\
	$(fasldir)/nausicaa/parser-tools/ip-addresses/ipv6-address-parser.fasl	\
	$(fasldir)/nausicaa/parser-tools/ipv4-addresses.fasl		\
	$(fasldir)/nausicaa/parser-tools/ipv6-addresses.fasl		\
	$(fasldir)/nausicaa/parser-tools/uri.fasl			\
	$(fasldir)/nausicaa/parser-tools/uri/utilities.fasl
	\
	$(fasldir)/nausicaa/mehve.fasl					\
	$(fasldir)/nausicaa/mehve/language/numerics/predicates.fasl	\
	$(fasldir)/nausicaa/mehve/language/numerics/arithmetics.fasl	\
	$(fasldir)/nausicaa/mehve/language/numerics/parts.fasl		\
	$(fasldir)/nausicaa/mehve/language/numerics/transcendental.fasl	\
	$(fasldir)/nausicaa/mehve/language/infix.fasl			\
	$(fasldir)/nausicaa/mehve/language/input-output.fasl
endif

if WANT_LIBFFI
libffidir		= $(instdir)
nobase_dist_libffi_DATA	= \
	$(fasldir)/vicare/ffi.fasl					\
	$(fasldir)/vicare/ffi/foreign-pointer-wrapper.fasl
endif

if WANT_POSIX
libposixdir			= $(instdir)
nobase_dist_libposix_DATA	= \
	$(fasldir)/vicare/posix.fasl					\
	$(fasldir)/vicare/posix/pid-files.fasl				\
	$(fasldir)/vicare/posix/lock-pid-files.fasl			\
	$(fasldir)/vicare/posix/log-files.fasl				\
	$(fasldir)/vicare/posix/daemonisations.fasl			\
	$(fasldir)/vicare/posix/simple-event-loop.fasl			\
	$(fasldir)/vicare/posix/tcp-server-sockets.fasl
endif

if WANT_GLIBC
libglibcdir			= $(instdir)
nobase_dist_libglibc_DATA	= $(fasldir)/vicare/glibc.fasl
endif

if WANT_LIBICONV
libiconvdir			= $(instdir)
nobase_dist_libiconv_DATA	= $(fasldir)/vicare/iconv.fasl
endif

if WANT_LIBFFI
if WANT_POSIX
if WANT_GLIBC
libgccdir			= $(instdir)
nobase_dist_libgcc_DATA		= $(fasldir)/vicare/gcc.fasl
endif
endif
endif

if WANT_LINUX
liblinuxdir			= $(instdir)
nobase_dist_liblinux_DATA	= $(fasldir)/vicare/linux.fasl
endif

if WANT_READLINE
libreadlinedir			= $(instdir)
nobase_dist_libreadline_DATA	= $(fasldir)/vicare/readline.fasl
endif

if WANT_CRE2
libcre2dir			= $(instdir)
nobase_dist_libcre2_DATA	= $(fasldir)/vicare/cre2.fasl
endif

#page
## library compilation rules

NEW_BOOT_FILE			= $(builddir)/../scheme/vicare.boot
VICARE_FASL_DIRECTORY		= $(builddir)
VICARE_COMPILE_LIBRARY_PATH	= $(builddir):$(srcdir):$(VICARE_LIBRARY_PATH)
VICARE_COMPILE_FASL_PATH	= $(VICARE_FASL_DIRECTORY):$(VICARE_FASL_PATH)
VICARE_COMPILE_LD_PATH		= $(builddir)/../src/.libs

VICARE		= $(builddir)/../src/vicare
VICARE_BOOT	= $(builddir)/../scheme/vicare.boot
VICARE_ENV	= VICARE_LIBRARY_PATH=$(VICARE_COMPILE_LIBRARY_PATH);		export VICARE_LIBRARY_PATH;	\
		  VICARE_FASL_PATH=$(VICARE_COMPILE_FASL_PATH);			export VICARE_FASL_PATH;	\
		  SILEX_PATH=$(srcdir)/vicare/parser-tools/silex/macros;	export SILEX_PATH;		\
		  LD_LIBRARY_PATH=$(VICARE_COMPILE_LD_PATH);			export LD_LIBRARY_PATH;		\
		  DYLD_LIBRARY_PATH=$(VICARE_COMPILE_LD_PATH);			export DYLD_LIBRARY_PATH;
VICARE_FLAGS	= -b $(VICARE_BOOT) --fasl-directory $(VICARE_FASL_DIRECTORY)  $(AX_VFLAGS) $(VFLAGS)
VICARE_RUN	= $(VICARE_ENV) $(VICARE) $(VICARE_FLAGS)

ALLFASL	= \
	$(nobase_dist_libvicare_DATA)		\
	$(nobase_dist_libsrfi_DATA)		\
	$(nobase_dist_libnausicaa_DATA)		\
	$(nobase_dist_libffi_DATA)		\
	$(nobase_dist_libposix_DATA)		\
	$(nobase_dist_libsrfiposix_DATA)	\
	$(nobase_dist_libglibc_DATA)		\
	$(nobase_dist_libgcc_DATA)		\
	$(nobase_dist_liblinux_DATA)		\
	$(nobase_dist_libiconv_DATA)		\
	$(nobase_dist_libreadline_DATA)		\
	$(nobase_dist_libcre2_DATA)

.PHONY: vfasl

vfasl: $(ALLFASL)

$(nobase_dist_libvicare_DATA): $(NEW_BOOT_FILE) vicare/platform/features.sls
	test -d $(VICARE_FASL_DIRECTORY) || $(MKDIR_P) $(VICARE_FASL_DIRECTORY)
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-platform.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-unsafe.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-language-extensions.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-crypto.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-numerics.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-containers.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-parser-tools.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-net.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-vicare-misc.sps

$(nobase_dist_libsrfi_DATA): $(NEW_BOOT_FILE)
if WANT_SRFI
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-srfi.sps
endif

$(nobase_dist_libnausicaa_DATA): $(nobase_dist_libvicare_DATA)
if WANT_NAUSICAA
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-nausicaa-language.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-nausicaa-containers.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-nausicaa-parser-tools.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-nausicaa-misc.sps
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-mehve-language.sps
endif

$(nobase_dist_libffi_DATA): $(nobase_dist_libvicare_DATA)
if WANT_LIBFFI
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-ffi.sps
endif

$(nobase_dist_libposix_DATA): $(nobase_dist_libvicare_DATA)
if WANT_POSIX
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-posix.sps
endif

$(nobase_dist_libsrfiposix_DATA): $(nobase_dist_libposix_DATA) $(nobase_dist_libsrfi_DATA)
if WANT_POSIX
if WANT_SRFI
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-srfi-posix.sps
endif
endif

$(nobase_dist_libglibc_DATA): $(nobase_dist_libposix_DATA)
if WANT_GLIBC
if WANT_POSIX
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-glibc.sps
endif
endif

$(nobase_dist_libgcc_DATA): $(nobase_dist_libposix_DATA) $(nobase_dist_libglibc_DATA) $(nobase_dist_libffi_DATA)
if WANT_LIBFFI
if WANT_POSIX
if WANT_GLIBC
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-gcc.sps
endif
endif
endif

$(nobase_dist_liblinux_DATA): $(nobase_dist_libposix_DATA)
if WANT_LINUX
if WANT_POSIX
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-linux.sps
endif
endif

$(nobase_dist_libiconv_DATA): $(nobase_dist_libvicare_DATA)
if WANT_LIBICONV
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-iconv.sps
endif

$(nobase_dist_libreadline_DATA): $(nobase_dist_libvicare_DATA)
if WANT_READLINE
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-readline.sps
endif

$(nobase_dist_libcre2_DATA): $(nobase_dist_libvicare_DATA)
if WANT_CRE2
	$(VICARE_RUN) --compile-dependencies $(srcdir)/compile-cre2.sps
endif

## --------------------------------------------------------------------

noinst_PROGRAMS		= features
features_SOURCES	= features.c

vicare/platform/features.sls : features
	$(MKDIR_P) vicare/platform && ./features >$@

vicare/platform/features.fasl : vicare/platform/features.sls

## --------------------------------------------------------------------

CLEANFILES	= vicare/platform/features.sls $(ALLFASL)

clean-local:
	-rm -rf $(VICARE_FASL_DIRECTORY)

#page
#### SILex lexers building

SILEX_SRCDIR		= $(srcdir)/vicare/parser-tools/silex
NAUIPADDR_SRCDIR	= $(srcdir)/nausicaa/parser-tools/ip-addresses

.PHONY: silex-internals silex-backup ip-address-tables

silex-internals:
	@echo; echo "*** Special rule: rebuilding SILex internals lexer tables"; echo
	@export SILEX_SRCDIR=$(SILEX_SRCDIR); $(VICARE_RUN) $(SILEX_SRCDIR)/make-tables.sps

silex-backup:
	@echo; echo "*** Special rule: backup of SILex internals lexer tables"; echo
	cp --verbose $(SILEX_SRCDIR)/*-l.sls $(SILEX_SRCDIR)/*.l $(SILEX_SRCDIR)/backup

ip-address-tables:
	@echo; echo "*** Special rule: rebuilding net libraries tables"; echo
	@export NAUIPADDR_SRCDIR=$(NAUIPADDR_SRCDIR); $(VICARE_RUN) $(NAUIPADDR_SRCDIR)/make-tables.sps

### end of file
